# nixie

./: .editorconfig  .gitignore  .gitmodules  COPYING  Cargo.toml  README.md  build.rs  co.tauos.Nixie.json  com.fyralabs.Nixie.doap  com.fyralabs.Nixie.json  install_schema.sh  meson.build
.github/workflows/: ci.yml  deploy.yml
data/: co.tauos.Nixie.appdata.xml.in  co.tauos.Nixie.desktop  co.tauos.Nixie.desktop.in  co.tauos.Nixie.gresource.xml  co.tauos.Nixie.gresources.xml  co.tauos.Nixie.gschema.xml  co.tauos.Nixie.metainfo.xml  co.tauos.Nixie.service.in  com.fyralabs.Nixie.appdata.xml.in  com.fyralabs.Nixie.desktop.in  com.fyralabs.Nixie.gresource.xml  com.fyralabs.Nixie.gschema.xml  com.fyralabs.Nixie.service.in  meson.build  style.css
data/ui/: alarm_setup.ui  alarmdaypickerrow.ui  alarmface.ui  alarmringingpanel.ui  alarmrow.ui  alarms.ui  alarmsetup.ui  alarmsetupdialog.ui  clock_location_row.ui  clock_locations.ui  clock_row.ui  clocks.ui  mainwindow.ui  stopwatch.ui  stopwatch_laps.ui  stopwatchface.ui  stopwatchrow.ui  timerface.ui  timerrow.ui  timersetup.ui  window.ui  worldface.ui  worldlocationfinder.ui  worldrow.ui
src/: .main.rs.swp  AlarmFace.vala  AlarmSetupDialog.vala  Application.vala  MainWindow.vala  Portal.vala  StopwatchFace.vala  TimerFace.vala  TimerSetup.vala  Utils.vala  WorldFace.vala  WorldLocationFinder.vala  alarm.rs  application.rs  clock.rs  clock_store.rs  config.rs  cutils.c  duration.rs  lap.rs  macros.rs  main.rs  weekday.rs  window.rs
src/ui/: alarms.rs  clock_row.rs  clocks.rs  clocks.ui  mod.rs  stopwatch.rs  timer.rs
src/ui/clocks/: clocks.ui  imp.rs  mod.rs
src/ui/dialogs/: alarm_setup.rs  clock_location_row.rs  clock_locations.rs  mod.rs
src/ui/widgets/: clock_location_row.rs  clock_row.rs  stopwatch_laps_row.rs
