[package]
name = "nixie"
version = "1.0.0"
authors = [ "Jamie Murphy <hello@jamiethalacker.dev" ]
description = "A clock app"
edition = "2021"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"

[build-dependencies.gio]
version = "0.15"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5"

[dependencies.he]
package = "libhelium"
git = "https://github.com/tau-OS/libhelium-rs"

[dependencies.gweather]
package = "libgweather"
git = "https://github.com/ItsJamie9494/libgweather-rs"
