[package]
name = "nixie"
version = "1.0.0"
authors = [ "Jamie Murphy <hello@jamiethalacker.dev" ]
description = "A clock app"
edition = "2021"

[dependencies]

log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }

chrono = "0.4.19"
chrono-tz = "0.6.1"
unicode-casefold = "0.2"
unicode-normalization = "0.1.19"
stopwatch = "0.0.7"

[build-dependencies]
owo-colors = "3.4.0"
gio = "0.15"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.5"

[dependencies.he]
package = "libhelium"
path = "./libhelium-rs"

# Needed for some missing LibHe components
[dependencies.adw]
package = "libadwaita"
path = "./libadwaita-rs/libadwaita"

[dependencies.gweather]
package = "libgweather"
git = "https://github.com/ItsJamie9494/libgweather-rs"
